# scicomp

./: IdbullConfig.md  OtherReferences.md  ProjectHome.md
course/: Makefile  intro.tex  scicomp-approx-beamer.tex  scicomp-hpfem.tex  scicomp-intro.tex  scicomp.tex
course/Exercises/: galerkin_1d_p.tex
course/Exercises/programs/: blitz-matlab.m  td1.m  td1_exo1.cpp  (+1 more)
course/Exercises/programs/galerkin_1d_p/: CMakeLists.txt  Makefile  SConstruct  functional.hpp  functionalset.hpp  jacobi.hpp  polynomialset.hpp  polyplot.m  test_fset.cpp  test_jacobi.cpp  test_legendreset.cpp  ublas.hpp
course/IntroC++/: cours-style.tex  introCpp3M-body.tex  introCpp3M-print.tex  introCpp3M.tex
course/Notes/: lecture-style.tex  scicomp-approx.tex  scicomp-galerkin-beamer.tex  scicomp-galerkin.tex  scicomp-hpfem-print.tex  scicomp-intro-print.tex  scicomp-intro.tex  scicomp-linalg-print.tex  scicomp-rootsintegrals-beamer.tex  scicomp-rootsintegrals.tex
course/figures/: !  Delaunay2D.ps  Delaunay3D.ps  arch2.eps  arch2.sla  arch2.tex  architecture.pov  architecture.ps  deice-1.eps  deice-5.eps  divfree-2-1-3.ps  epflsi-method.fig  film_2fluid.p08  film_2fluid.p10  film_2fluid.p11  film_2fluid.p12  film_2fluid.p15  film_2fluid.p16  film_2fluid.p17  film_2fluid.p18  film_2fluid.p19  film_2fluid.p21  framework.0  framework.mp  lag_2_3_p_5.ps  lag_2_3_p_6.ps  lag_2_3_p_9.ps  mpsv-kr.fig  mpsv-kr.mp  pavia.0  pavia1.0  triangle.ps
course/project/: ailette.tex  photoPCINpact.eps
trunk/course/: lecture-style.tex  scicomp-linalg-beamer.tex
wiki/: IdbullConfig.wiki  PageName.wiki
(+71 files in other folders)
